--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -21,4 +21,4 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          python -m pytest
+          python -m pytest --verbose
