Added initial work on workshop.py

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Ignores all local annotations except for those named as map names
 local/*
-!local/de_*/
+!local/de_*/de_*.txt
 
 # Ignore output files
 annotations/*
