--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,29 +31,29 @@ jobs:
           fail_on_unmatched_files: true
           generate_release_notes: true
           make_latest: true
-      - id: setup-steamcmd
-        uses: CyberAndrii/setup-steamcmd@v1.2.0
-      - id: setup-steam-dir
-        run: |
-          mkdir -p "/home/runner/Steam/config"
-          echo "$SteamConfigVDF" > "/home/runner/Steam/config/config.vdf"
-          chmod 777 "/home/runner/Steam/config/config.vdf"
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - id: setup-steam-dir
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          mkdir -p "/home/runner/Steam/config"
+          echo "$SteamConfigVDF" > "/home/runner/Steam/config/config.vdf"
+          chmod 777 "/home/runner/Steam/config/config.vdf"
+      - id: setup-steamcmd
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: CyberAndrii/setup-steamcmd@v1.2.0
       - id: update_workshop
+        if: startsWith(github.ref, 'refs/tags/')
         env:
-          # Steam account name to login with
-          STEAM_ACCOUNT_NAME: ${{ secrets.STEAM_ACCOUNT_NAME }}
           # Plain-text steam config vdf generated for the account being used. Used for MFA
           # Generate the content by logging in locally using MFA
           STEAM_CONFIG_VDF: ${{ secrets.STEAM_CONFIG_VDF }}
-          # Path to the steamcmd executable
-          STEAM_CMD: ${{ steps.setup-steamcmd.outputs.executable }}
         run: |
-          python src/workshop.py
+          python src/workshop.py --steam_account_name ${{ secrets.STEAM_ACCOUNT_NAME }} --steam_cmd ${{ steps.setup-steamcmd.outputs.executable }}
