fix error in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 *.pyc
 
 # Ignores all local annotations except for those named as map names
-local/*
-!local/de_*/de_*.txt
+**/local/*
+!**/local/de_*/
 
 # Ignore output files
 annotations/*
