Update workflow files to accept unpinned actions and reduce permissions

--- a/.github/workflows/MegaLinter.yml
+++ b/.github/workflows/MegaLinter.yml
@@ -25,6 +25,9 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout Code
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of actions/
+        # kics-scan ignore-line
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
@@ -32,8 +35,11 @@ jobs:
           # can be removed to improve performance
           # fetch-depth: 0
       - name: MegaLinter
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of oxsecurity/
+        # kics-scan ignore-line
         uses: oxsecurity/megalinter@v8
-        id: megalinter
+        id: ml
         env:
           # Validates all source when push on main, else just the git diff with
           # main. Override with true if you always want to lint all sources
@@ -51,6 +57,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Archive production artifacts
         if: success() || failure()
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of actions/
+        # kics-scan ignore-line
         uses: actions/upload-artifact@v4
         with:
           name: MegaLinter reports
@@ -85,6 +94,9 @@ jobs:
       # Create pull request if applicable
       # (for now works only on PR from same repository, not from forks)
       - name: Create Pull Request with applied fixes
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of peter-evans/
+        # kics-scan ignore-line
         uses: peter-evans/create-pull-request@v6
         id: cpr
         if: env.APPLY_FIXES_IF_PR == 'true'
@@ -107,6 +119,9 @@ jobs:
         run: sudo chown -Rc $UID .git/
 
       - name: Commit and push applied linter fixes
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of stefanzweifel/
+        # kics-scan ignore-line
         uses: stefanzweifel/git-auto-commit-action@v4
         if: env.APPLY_FIXES_IF_COMMIT == 'true'
         with:
