--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
         python-version: [3.12]
     steps:
       - name: Checkout
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of Actions/
+        # kics-scan ignore-line
         uses: actions/checkout@v4
       - name: Build
         run: |
@@ -25,6 +28,9 @@ jobs:
       - name: Release zip
         # Only release when a tag is pushed, which triggered this workflow
         if: startsWith(github.ref, 'refs/tags/')
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of softprops/
+        # kics-scan ignore-line
         uses: softprops/action-gh-release@v2
         with:
           files: annotations.zip
@@ -32,6 +38,9 @@ jobs:
           generate_release_notes: true
           make_latest: true
       - name: Set up Python
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of Actions/
+        # kics-scan ignore-line
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -48,6 +57,9 @@ jobs:
           chmod 777 "/home/runner/Steam/config/config.vdf"
       - id: setup-steamcmd
         if: startsWith(github.ref, 'refs/tags/')
+        # Accept Unpinned Actions Full Length Commit SHA
+        # As we trust the merge and release process of CyberAndrii/
+        # kics-scan ignore-line
         uses: CyberAndrii/setup-steamcmd@v1.2.0
       - id: update_workshop
         if: startsWith(github.ref, 'refs/tags/')
