--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+colorama==0.4.6
 iniconfig==2.0.0
-keyvalues3==0.1
+keyvalues3==0.2
+lz4==4.3.3
 packaging==24.2
+parsimonious==0.10.0
 pluggy==1.5.0
-pytest==8.3.3
+pytest==8.3.4
+regex==2024.11.6
