--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
+# Disable: Unpinned Actions Full Length Commit SHA
+# kics-scan disable=555ab8f9-2001-455e-a077-f2d0f41e2fb9
+---
 name: main
 on:
   push:
@@ -16,9 +19,6 @@ jobs:
         python-version: [3.12]
     steps:
       - name: Checkout
-        # Accept Unpinned Actions Full Length Commit SHA
-        # As we trust the merge and release process of Actions/
-        # kics-scan ignore-line
         uses: actions/checkout@v4
       - name: Build
         run: |
@@ -28,9 +28,6 @@ jobs:
       - name: Release zip
         # Only release when a tag is pushed, which triggered this workflow
         if: startsWith(github.ref, 'refs/tags/')
-        # Accept Unpinned Actions Full Length Commit SHA
-        # As we trust the merge and release process of softprops/
-        # kics-scan ignore-line
         uses: softprops/action-gh-release@v2
         with:
           files: annotations.zip
@@ -38,9 +35,6 @@ jobs:
           generate_release_notes: true
           make_latest: true
       - name: Set up Python
-        # Accept Unpinned Actions Full Length Commit SHA
-        # As we trust the merge and release process of Actions/
-        # kics-scan ignore-line
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
