--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,4 +1,5 @@
 PRE_COMMANDS:
-  - command:
-      python -m pip install --upgrade pip
-      pip install -r requirements.txt
+  - command: pip install -r requirements.txt
+    venv: pylint
+  - command: pip install -r requirements.txt
+    venv: pyright
