--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -5,3 +5,5 @@ PYTHON_PRE_COMMANDS:
 DISABLE_LINTERS:
   # Disabling black as I do not agree with the formatting
   - PYTHON_BLACK
+  # markdown tables are formatted with prettier
+  - MARKDOWN_MARKDOWN_TABLE_FORMATTER
