add missing && to python pre commands

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,5 +1,7 @@
 PYTHON_PRE_COMMANDS:
-  - command: python3 -m pip install --no-cache-dir -r /tmp/lint/requirements.txt
+  - command: >
+      pip install --upgrade pip --root-user-action=ignore &&
+      python3 -m pip install --no-cache-dir -r /tmp/lint/requirements.txt
     venv: pylint
     continue_if_failed: false
 DISABLE_LINTERS:
