--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,4 +1,4 @@
-PYTHON_PRE_COMMANDS:
+PRE_COMMANDS:
   - command: >
       pip install --upgrade pip --root-user-action=ignore &&
       python3 -m pip install --no-cache-dir -r /tmp/lint/requirements.txt
