Reapply "Change PRE_COMMANDS  to PYTHON_PRE_COMMANDS in MegaLinter configuration"
This reverts commit 363a52e03be2dc939e675a91012bcd959176aa76.

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,4 +1,4 @@
-PRE_COMMANDS:
+PYTHON_PRE_COMMANDS:
   - command: >
       pip install --upgrade pip --root-user-action=ignore &&
       python3 -m pip install --no-cache-dir -r /tmp/lint/requirements.txt
