--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -3,3 +3,6 @@ DISABLE_LINTERS:
   - PYTHON_BLACK
   # markdown tables are formatted with prettier
   - MARKDOWN_MARKDOWN_TABLE_FORMATTER
+  # DevSkim is currently reporting a missing dotnet core version
+  # as it requires 8.0.0 but megalinter ships with 9.0.1
+  - REPOSITORY_DEVSKIM
