--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,20 +38,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - id: setup-steam-dir
-        run: |
-          mkdir -p "/home/runner/Steam/config"
-          echo "$SteamConfigVDF" > "/home/runner/Steam/config/config.vdf"
-          chmod 777 "/home/runner/Steam/config/config.vdf"
       - id: setup-steamcmd
         # Accept Unpinned Actions Full Length Commit SHA
         # As we trust the merge and release process of CyberAndrii/
         # kics-scan ignore-line
         uses: CyberAndrii/setup-steamcmd@v1.2.0
-      - id: update_workshop
+      - id: setup-steam-config
         env:
-          # Plain-text steam config vdf generated for the account being used. Used for MFA
-          # Generate the content by logging in locally using MFA
           STEAM_CONFIG_VDF: ${{ secrets.STEAM_CONFIG_VDF }}
+        run: |
+          STEAM_CMD="${{ steps.setup-steamcmd.outputs.executable }}"
+          CONFIG_DIR="$STEAM_CMD/config"
+          CONFIG_PATH="$CONFIG_DIR/config.vdf"
+          mkdir -p $CONFIG_DIR
+          echo "$STEAM_CONFIG_VDF" | base64 -d > $CONFIG_PATH
+          chmod 700 $CONFIG_PATH
+      - id: update_workshop
         run: |
           python src/workshop.py --steam_account_name ${{ secrets.STEAM_ACCOUNT_NAME }} --steam_cmd ${{ steps.setup-steamcmd.outputs.executable }}
