--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,8 @@ jobs:
           STEAM_CONFIG_VDF: ${{ secrets.STEAM_CONFIG_VDF }}
         run: |
           STEAM_CMD="${{ steps.setup-steamcmd.outputs.executable }}"
-          CONFIG_DIR="$STEAM_CMD/config"
+          STEAM_DIR="${{ steps.setup-steamcmd.outputs.directory }}"
+          CONFIG_DIR="$STEAM_DIR/config"
           CONFIG_PATH="$CONFIG_DIR/config.vdf"
           mkdir -p $CONFIG_DIR
           echo "$STEAM_CONFIG_VDF" | base64 -d > $CONFIG_PATH
